src/test/ui/parser/issues/issue-34222-1.stderr
error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/issue-34222-1.rs:2:5
   |
LL |     /// comment
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: doc comments must come before what they document, maybe a comment was intended with `//`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0585`.
